<resources>
    <string name="app_name">MarketFP</string>
    <string name="sign_in">signin\n</string>
    <string name="username">username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="for_got_pass">for_got_pass</string>
    <string name="others">others</string>
    <string name="slideshow_viewpager_desc">Slideshow view pager</string>
    <string name="google_desc">google\n</string>
    <string name="tweeter_desc">tweeter</string>
    <string name="whatsapp_desc">whatsapp</string>
    <string name="facebook_desc">facebook</string>
    <string name="market_prices">Market Prices</string>
    <string name="smartphone">smartphones</string>
    <string name="_699_99">69999</string>
    <string name="description_high_end_smartphone_with_advanced_features_and_excellent_camera">Description high end smartphone with quality camera</string>
    <string name="laptop">laptops</string>
    <string name="_1299_99">129999</string>
    <string name="description_powerful_laptop_with_high_performance_specs_for_professional_use">description_powerful_laptop_with_high_performance_specs_for_professional_use</string>
    <string name="smart_watch">smart watches</string>
    <string name="_199_99">19999</string>
    <string name="description_stylish_smart_watch_with_fitness_tracking_and_notification_features">description_stylish_smart_watch_with_fitness_tracking_and_notification_features</string>
    <string name="tablet">table</string>
    <string name="_449_99">49999</string>
    <string name="description_portable_tablet_with_a_large_screen_ideal_for_multimedia_and_productivity">description_portable_tablet_with_a_large_screen_ideal_for_multimedia_and_productivity</string>
    <string name="login">login</string>
    <string name="welcome_to_market_fetch_price">welcome to Langata MarketFP</string>
    <string name="todo">todo</string>
    <string name="Sign_in">signin</string>
    <string name="go_to_login">Go to Login</string>
    <string name="back">Back</string>
    <string name="agricultural_products">Agricultural Products</string>
    <string name="google">Google</string>
    <string name="mango">Mango</string>
    <string name="price_1_50_each">Price: $1.50 each</string>
    <string name="description_juicy_and_sweet_tropical_fruit_rich_in_vitamins_and_antioxidants">Description: Juicy and sweet tropical fruit, rich in vitamins and antioxidants.</string>
    <string name="maize">Maize</string>
    <string name="price_0_50_per_ear">Price: $0.50 per ear</string>
    <string name="description_staple_grain_used_for_food_and_feed_known_for_its_versatility_and_nutritional_value">Description: Staple grain used for food and feed, known for its versatility and nutritional value.</string>
    <string name="banana">Banana</string>
    <string name="price_0_30_each">Price: $0.30 each</string>
    <string name="description_sweet_and_creamy_fruit_a_good_source_of_potassium_and_energy">Description: Sweet and creamy fruit, a good source of potassium and energy.</string>
    <string name="tomato">Tomato</string>
    <string name="price_2_00_per_kg">Price: $2.00 per kg</string>
    <string name="description_versatile_fruit_used_in_various_cuisines_rich_in_vitamins_a_and_c">Description: Versatile fruit used in various cuisines, rich in vitamins A and C.</string>
    <string name="orange">Orange</string>
    <string name="price_1_00_each">Price: $1.00 each</string>
    <string name="description_citrus_fruit_known_for_its_juicy_and_tangy_flavor_rich_in_vitamin_c">Description: Citrus fruit known for its juicy and tangy flavor, rich in vitamin C.</string>
    <string name="pineapple">Pineapple</string>
    <string name="price_3_00_each">Price: $3.00 each</string>
    <string name="description_tropical_fruit_with_a_sweet_and_tart_flavor_excellent_for_digestion">Description: Tropical fruit with a sweet and tart flavor, excellent for digestion.</string>
    <string name="langata_agri_product">Langata Agri Product</string>

</resources>