<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Sign_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Sign_in"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="#40ffffff"
        android:autofillHints=""
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:autofillHints="password"
        android:drawableStart="@drawable/baseline_warning_24"
        android:drawablePadding="20dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/for_got_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/for_got_pass"
        android:textColor="@color/black" />

    <!-- Replace this TextView with a Button -->
    <Button
        android:id="@+id/social_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/for_got_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/others"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google_desc" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:src="@drawable/tweeter"
            android:contentDescription="@string/tweeter_desc" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:src="@drawable/whatsapp"
            android:contentDescription="@string/whatsapp_desc" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook_desc" />
    </LinearLayout>
</RelativeLayout>
