<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/log1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeHomeActivity">

    <TextView
        android:id="@+id/tvLangataAgriProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/langata_agri_product"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp" />

    <ImageView
        android:id="@+id/image_log4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLangataAgriProduct"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/a5" />

    <!-- Welcome statement -->
    <TextView
        android:id="@+id/tvWelcomeStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_market_fetch_price"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/image_log4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnNavigateToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:layout_below="@id/tvWelcomeStatement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />
</RelativeLayout>
